force-app/main/default/objects/KPI_Category_Management__c/KPI_Category_Management__c.object-meta.xml
<CustomObject>
    <label>KPI Category Management</label>
    <nameField>
        <label>KPI Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Category Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>