force-app/main/default/objects/KPI_Category_Management__c/fields/Active_Deactive__c.field-meta.xml
<CustomField>
    <fullName>Active_Deactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active/ Deactive</label>
    <type>Checkbox</type>
</CustomField>