force-app/main/default/objects/KPI_Category_Management__c/fields/Apply_to_Role__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_Role__c</fullName>
    <label>Apply to Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike Sales KPI by position:</fullName>
            </value>
            <value>
                <fullName>Sales supervisor (Also conduct direct sales)</fullName>
            </value>
            <value>
                <fullName>Sales AM/Manager (NOT conduct direct sales)</fullName>
            </value>
            <value>
                <fullName>Service consultant (Conduct direct service sales)</fullName>
            </value>
            <value>
                <fullName>ALL Technician (Chief, Advance, Technician, Detailing Expert, Detailing specialist)</fullName>
            </value>
            <value>
                <fullName>Service AM/Sup</fullName>
            </value>
            <value>
                <fullName>PCA Sales consultant</fullName>
            </value>
            <value>
                <fullName>PCA Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>