force-app/main/default/objects/KPI_Category_Management__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>