force-app/main/default/objects/KPI_Category_Management__c/fields/KPI_Code__c.field-meta.xml
<CustomField>
    <fullName>KPI_Code__c</fullName>
    <displayFormat>KPI-{00000}</displayFormat>
    <label>KPI Code</label>
    <type>AutoNumber</type>
</CustomField>