force-app/main/default/objects/KPI_Category_Management__c/fields/KPI_Criteria__c.field-meta.xml
<CustomField>
    <fullName>KPI_Criteria__c</fullName>
    <label>KPI Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apply_to_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales volume</fullName>
            </value>
            <value>
                <fullName>Number of enquiries (Opty)</fullName>
            </value>
            <value>
                <fullName>Quality of enquiries (Lead)</fullName>
            </value>
            <value>
                <fullName>Number of Test ride</fullName>
            </value>
            <value>
                <fullName>Content creation</fullName>
            </value>
            <value>
                <fullName>TSI score</fullName>
            </value>
            <value>
                <fullName>Customer follow up</fullName>
            </value>
            <value>
                <fullName>Sales team volume</fullName>
            </value>
            <value>
                <fullName>Training section</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Showroom monitoring</fullName>
            </value>
            <value>
                <fullName>Team TSI</fullName>
            </value>
            <value>
                <fullName>Team content creation</fullName>
            </value>
            <value>
                <fullName>Average conversion rate</fullName>
            </value>
            <value>
                <fullName>Sales dept. volume</fullName>
            </value>
            <value>
                <fullName>Sales dept. revenue</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Number of enquiries</fullName>
            </value>
            <value>
                <fullName>Sales dept. TSI</fullName>
            </value>
            <value>
                <fullName>Sales dept. content creation</fullName>
            </value>
            <value>
                <fullName>Monthly revenue (PCA target)</fullName>
            </value>
            <value>
                <fullName>Monthly revenue (Service revenue)</fullName>
            </value>
            <value>
                <fullName>Service Dept. TSI</fullName>
            </value>
            <value>
                <fullName>Customer following up</fullName>
            </value>
            <value>
                <fullName>Service efficiency</fullName>
            </value>
            <value>
                <fullName>Service productivity</fullName>
            </value>
            <value>
                <fullName>Customer retention rate</fullName>
            </value>
            <value>
                <fullName>Hour sold target</fullName>
            </value>
            <value>
                <fullName>Customer complain handling</fullName>
            </value>
            <value>
                <fullName>Monthly sales volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>