force-app/main/default/objects/KPI_Category_Management__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate/ %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>