force-app/main/default/objects/KPI_Category_Management__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Sales Supevisor</fullName>
            </value>
            <value>
                <fullName>Sales AM/Manager</fullName>
            </value>
            <value>
                <fullName>Service Consultant</fullName>
            </value>
            <value>
                <fullName>Service Technician</fullName>
            </value>
            <value>
                <fullName>Service AM/Sup</fullName>
            </value>
            <value>
                <fullName>PCA Sales Consultant</fullName>
            </value>
            <value>
                <fullName>PCA Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>