force-app/main/default/objects/KPI_Category_Management__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Team (Incl. Individual)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>